tests/parse_print/issues/361/1/stderr.expected
Error:
    tests/parse_print/issues/361/1/361_1.essence:3:34:
  |
3 | find x : V such that forAll j in V . x <= j
  |                                  ^
Tried to use a Domain where Value was expected
